<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference__week_target_category_title">

        <de.querra.mobile.runlazydroid.widgets.IntListPreference
            android:key="@string/preference__week_target"
            android:title="@string/preference__week_target__title"
            android:summary="@string/preference__week_target__summary"
            android:persistent="true"
            android:defaultValue="10"
            android:entries="@array/entries_list_preference__week_target"
            android:entryValues="@array/values_list_preference__week_target"
            android:dialogTitle="@string/preference__week_target__title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference__distance_category_title">

        <CheckBoxPreference
            android:key="@string/preference__auto_increment_distance"
            android:defaultValue="true"
            android:title="@string/preference__auto_increment_distance__title"
            android:summary="@string/preference__auto_increment_distance__summary" />

        <de.querra.mobile.runlazydroid.widgets.IntListPreference
            android:key="@string/preference__increment_distance"
            android:dependency="@string/preference__auto_increment_distance"
            android:title="@string/preference__increment_distance__title"
            android:summary="@string/preference__increment_distance__summary"
            android:persistent="true"
            android:defaultValue="1"
            android:entries="@array/entries_list_preference__increment_distance"
            android:entryValues="@array/values_list_preference__increment_distance"
            android:dialogTitle="@string/preference__increment_distance__title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference__penalty_category_title">

        <de.querra.mobile.runlazydroid.widgets.IntListPreference
            android:key="@string/preference__penalty_distance"
            android:title="@string/preference__penalty_distance__title"
            android:summary="@string/preference__penalty_distance__summary"
            android:persistent="true"
            android:defaultValue="5"
            android:entries="@array/entries_list_preference__penalty_distance"
            android:entryValues="@array/values_list_preference__penalty_distance"
            android:dialogTitle="Penalty distance" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Licenses">
        <PreferenceScreen
            android:title="View licenses"
            android:summary="View open source licenses">
            <intent android:action="de.querra.mobile.runlazydroid.activities.LicensesActivity"/>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>